<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/enter_text"
                android:inputType="text"
                android:textColor="@color/primary_text_color"
                android:textColorHint="@color/secondary_text_color"
                android:textSize="@dimen/edit_text_text_size" />

            <Button
                android:id="@+id/btn_one"
                android:text="@string/disp_text"
                android:backgroundTint="@color/teal_700"
                android:textColor="@color/primary_text_color"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/btn_two"
                android:text="@string/disp_notification"
                android:backgroundTint="@color/teal_700"
                android:textColor="@color/primary_text_color"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center" />

            <Button
                android:id="@+id/btn_three"
                android:text="@string/pop_up"
                android:backgroundTint="@color/teal_700"
                android:textColor="@color/primary_text_color"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center" />

            <Button
                android:id="@+id/btn_four"
                android:text="@string/change_text"
                android:backgroundTint="@color/teal_700"
                android:textColor="@color/primary_text_color"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>